Fix overflow for aside anchor tags

--- a/views/stylesheets/layout.styl
+++ b/views/stylesheets/layout.styl
@@ -56,6 +56,9 @@ aside
   ul
     list-style: none
   a
+    width: 100%
+    overflow: hidden
+    text-overflow: ellipsis
     text-transform: uppercase
     white-space: nowrap
 
